--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,26 @@
             <artifactId>sonar-maven-plugin</artifactId>
             <version>4.0.0.4121</version>
         </plugin>
+		<plugin>
+  <groupId>org.jacoco</groupId>
+  <artifactId>jacoco-maven-plugin</artifactId>
+  <version>0.8.11</version>
+  <executions>
+    <execution>
+      <goals>
+        <goal>prepare-agent</goal>
+      </goals>
+    </execution>
+    <execution>
+      <id>report</id>
+      <phase>test</phase>
+      <goals>
+        <goal>report</goal>
+      </goals>
+    </execution>
+  </executions>
+</plugin>
+
     </plugins>
 </build>
 
